[package]
name = "egui-command-binding"
version = "0.3.0"
edition = "2024"
description = "egui integration for egui-command: shortcut matching → CommandId dispatch"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Keivry/egui-command-binding"
homepage = "https://github.com/Keivry/egui-command-binding"
keywords = ["egui", "shortcut", "keybinding", "hotkey", "command"]
categories = ["gui"]

[dependencies]
egui = "0.34"
egui-command = "0.2.1"
parking_lot = "0.12"
